<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/main_navigation_graph"
   app:startDestination="@id/notesFragment">

   <fragment
      android:id="@+id/notesFragment"
      android:name="id.rllyhz.meapp.ui.feature.notes.NotesFragment"
      android:label="@string/action_bar_title_notes"
      tools:layout="@layout/fragment_notes" />
   <fragment
      android:id="@+id/remindersFragment"
      android:name="id.rllyhz.meapp.ui.feature.reminders.RemindersFragment"
      android:label="@string/action_bar_title_reminders"
      tools:layout="@layout/fragment_reminders" />
   <fragment
      android:id="@+id/settingsFragment"
      android:name="id.rllyhz.meapp.ui.feature.settings.SettingsFragment"
      android:label="@string/action_bar_title_settings"
      tools:layout="@layout/fragment_settings" />
</navigation>