<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <ImageView
      android:id="@+id/btn_go_back_adding_reminder"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_margin="8dp"
      android:contentDescription="@string/go_back_button_tooltip_text"
      android:src="@drawable/ic_arrow_left"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

   <TextView
      style="@style/HeadingStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="@string/action_bar_add_reminder"
      app:layout_constraintBottom_toBottomOf="@id/btn_go_back_adding_reminder"
      app:layout_constraintLeft_toRightOf="@id/btn_go_back_adding_reminder"
      app:layout_constraintTop_toTopOf="@id/btn_go_back_adding_reminder" />

   <ImageView
      android:id="@+id/btn_save_adding_reminder"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_margin="8dp"
      android:background="?android:attr/selectableItemBackground"
      android:contentDescription="@string/save_reminder_tooltip_text"
      android:src="@drawable/ic_check"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

   <EditText
      android:id="@+id/et_title_adding_reminder"
      style="@style/TextFieldTitleStyle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="24dp"
      android:padding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btn_save_adding_reminder">

      <requestFocus />
   </EditText>

   <EditText
      android:id="@+id/et_description_adding_reminder"
      style="@style/TextFieldDescriptionStyle"
      android:layout_width="0dp"
      android:layout_height="140dp"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:padding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/et_title_adding_reminder" />

   <TextView
      android:id="@+id/tv_schedule_on_label_adding_reminder"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:layout_marginTop="24dp"
      android:text="@string/schedule_on_label"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@id/et_description_adding_reminder" />

   <LinearLayout
      android:id="@+id/ll_pick_a_time_adding_reminder"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:background="?android:attr/selectableItemBackground"
      android:clickable="true"
      android:focusable="true"
      android:gravity="center"
      android:padding="8dp"
      app:layout_constraintLeft_toLeftOf="@id/tv_schedule_on_label_adding_reminder"
      app:layout_constraintTop_toBottomOf="@id/tv_schedule_on_label_adding_reminder">

      <TextView
         android:id="@+id/tv_pick_a_time_label_adding_reminder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pick_a_time_label"
         android:textColor="@color/grey" />

      <ImageView
         android:id="@+id/iv_ic_schedule_adding_reminder"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="8dp"
         android:contentDescription="@string/add_reminders_tooltip_text"
         android:src="@drawable/ic_reminder_outlined" />

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>