<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="48dp">

    <ImageView
        android:id="@+id/btn_go_back_adding_or_updating_reminder"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:background="@drawable/ripple_effects"
        android:contentDescription="@string/go_back_button_tooltip_text"
        android:padding="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_arrow_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/action_bar_add_reminder"
        android:textAppearance="@style/TextStyle.Heading"
        app:layout_constraintBottom_toBottomOf="@id/btn_go_back_adding_or_updating_reminder"
        app:layout_constraintLeft_toRightOf="@id/btn_go_back_adding_or_updating_reminder"
        app:layout_constraintTop_toTopOf="@id/btn_go_back_adding_or_updating_reminder" />

    <ImageView
        android:id="@+id/btn_save_adding_or_updating_reminder"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:background="@drawable/bg_outlined_button_primary"
        android:contentDescription="@string/save_reminder_tooltip_text"
        android:foreground="@drawable/ripple_effects"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_go_back_adding_or_updating_reminder"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_go_back_adding_or_updating_reminder"
        app:srcCompat="@drawable/icon_check"
        app:tint="?attr/colorPrimary" />

    <EditText
        android:id="@+id/et_title_adding_or_updating_reminder"
        style="@style/TextFieldTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save_adding_or_updating_reminder">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_description_adding_or_updating_reminder"
        style="@style/TextFieldDescriptionStyle"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title_adding_or_updating_reminder" />

    <TextView
        android:id="@+id/tv_daily_notifications_label_adding_or_updating_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/daily_schedule_label"
        android:textColor="@color/soft_black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description_adding_or_updating_reminder" />

    <RelativeLayout
        android:id="@+id/rl_container_daily_notifications_adding_or_updating_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="@id/tv_daily_notifications_label_adding_or_updating_reminder"
        app:layout_constraintRight_toRightOf="@id/et_description_adding_or_updating_reminder"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_notifications_label_adding_or_updating_reminder">

        <LinearLayout
            android:id="@+id/ll_container_daily_notifications_adding_or_updating_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ripple_effects"
            android:weightSum="2">

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daily_schedule_description_label"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_daily_notifications_adding_reminder"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pick_a_time_adding_or_updating_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_container_daily_notifications_adding_or_updating_reminder"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ripple_effects"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_pick_a_time_label_adding_or_updating_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_time_label"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_ic_time_schedule_adding_or_updating_reminder"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/add_reminders_tooltip_text"
                app:srcCompat="@drawable/icon_time" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_schedule_on_label_adding_or_updating_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/schedule_once_on_label"
        android:textColor="@color/soft_black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_container_daily_notifications_adding_or_updating_reminder" />

    <RelativeLayout
        android:id="@+id/rl_container_schedule_on_adding_or_updating_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/tv_schedule_on_label_adding_or_updating_reminder"
        app:layout_constraintRight_toRightOf="@id/et_description_adding_or_updating_reminder"
        app:layout_constraintTop_toBottomOf="@id/tv_schedule_on_label_adding_or_updating_reminder">

        <TextView
            android:id="@+id/tv_schedule_on_description_label_adding_or_updating_reminder"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/schedule_once_on_description_label"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/ll_pick_a_date_adding_or_updating_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_schedule_on_description_label_adding_or_updating_reminder"
            android:layout_alignBottom="@id/tv_schedule_on_description_label_adding_or_updating_reminder"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ripple_effects"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_pick_a_date_label_adding_or_updating_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_date_label"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_ic_date_schedule_adding_or_updating_reminder"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/add_reminders_tooltip_text"
                app:srcCompat="@drawable/icon_calendar" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_level_of_importance_label_adding_or_updating_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/level_of_importance_label"
        android:textColor="@color/soft_black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/rl_container_schedule_on_adding_or_updating_reminder"
        app:layout_constraintTop_toBottomOf="@id/rl_container_schedule_on_adding_or_updating_reminder" />

    <RelativeLayout
        android:id="@+id/rl_container_level_of_importance_description_adding_or_updating_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/tv_level_of_importance_label_adding_or_updating_reminder"
        app:layout_constraintRight_toRightOf="@id/et_description_adding_or_updating_reminder"
        app:layout_constraintTop_toBottomOf="@id/tv_level_of_importance_label_adding_or_updating_reminder">

        <TextView
            android:id="@+id/tv_level_of_importance_description_label_adding_or_updating_reminder"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/level_of_importance_description_label"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_level_of_importance_adding_or_updating_reminder"
            style="@style/CustomSpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_level_of_importance_description_label_adding_or_updating_reminder"
            android:layout_alignBottom="@id/tv_level_of_importance_description_label_adding_or_updating_reminder"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>