<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="48dp">

    <ImageView
        android:id="@+id/btn_go_back_adding_or_updating_note"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:background="@drawable/ripple_effects"
        android:contentDescription="@string/go_back_button_tooltip_text"
        android:padding="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_arrow_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/action_bar_add_note"
        android:textAppearance="@style/TextStyle.Heading"
        app:layout_constraintBottom_toBottomOf="@id/btn_go_back_adding_or_updating_note"
        app:layout_constraintLeft_toRightOf="@id/btn_go_back_adding_or_updating_note"
        app:layout_constraintTop_toTopOf="@id/btn_go_back_adding_or_updating_note" />

    <ImageView
        android:id="@+id/btn_save_adding_or_updating_note"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:background="@drawable/bg_outlined_button_primary"
        android:contentDescription="@string/save_note_tooltip_text"
        android:foreground="@drawable/ripple_effects"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_go_back_adding_or_updating_note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_go_back_adding_or_updating_note"
        app:srcCompat="@drawable/icon_check"
        app:tint="?attr/colorPrimary" />

    <EditText
        android:id="@+id/et_title_adding_or_updating_note"
        style="@style/TextFieldTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save_adding_or_updating_note">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_content_adding_or_updating_note"
        style="@style/TextFieldContentStyle"
        android:layout_width="0dp"
        android:layout_height="380dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title_adding_or_updating_note" />

    <TextView
        android:id="@+id/tv_level_of_importance_label_adding_or_updating_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/level_of_importance_label"
        android:textAppearance="@style/TextStyle.Form.Label"
        app:layout_constraintStart_toStartOf="@id/et_content_adding_or_updating_note"
        app:layout_constraintTop_toBottomOf="@id/et_content_adding_or_updating_note" />

    <TextView
        android:id="@+id/tv_level_of_importance_description_label_adding_or_updating_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_of_importance_description_label"
        android:textAppearance="@style/TextStyle.Form.Description"
        app:layout_constraintStart_toStartOf="@id/et_content_adding_or_updating_note"
        app:layout_constraintTop_toBottomOf="@id/tv_level_of_importance_label_adding_or_updating_note" />

    <Spinner
        android:id="@+id/spinner_level_of_importance_adding_or_updating_note"
        style="@style/CustomSpinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_level_of_importance_description_label_adding_or_updating_note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_level_of_importance_description_label_adding_or_updating_note" />

</androidx.constraintlayout.widget.ConstraintLayout>